<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/getOutAccent">

    <ImageView
        android:id="@+id/getout3ID"
        android:layout_width="534dp"
        android:layout_height="493dp"
        android:layout_marginStart="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/get_out" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="**********"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/email"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/emailArea"
        app:layout_constraintTop_toBottomOf="@+id/emailArea" />

    <EditText
        android:id="@+id/emailArea"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="name.surname@ug.bilkent.edu.tr"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@color/getOutAccent"
        android:text="@string/logIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

</android.support.constraint.ConstraintLayout>