<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/getOutAccent">

    <ImageView
        android:id="@+id/getout2ID"
        android:layout_width="544dp"
        android:layout_height="493dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/get_out" />
    <EditText
        android:id="@+id/passwordEdit2ID"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="******"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <EditText
        android:id="@+id/passwordEdit2ID2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="******"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <TextView
        android:id="@+id/password"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit2ID" />


    <TextView
        android:id="@+id/password2"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/passwordConfirm"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/passwordEdit2ID"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit2ID" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEdit2ID"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="name.surname@ug.bilkent.edu.tr"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/email2"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <Button
        android:id="@+id/sendCodeID"
        android:layout_width="143dp"
        android:layout_height="40dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:background="@color/getOutAccent"
        android:text="@string/sendCode"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit2ID" />

    <TextView
        android:id="@+id/verificationText"
        android:layout_width="196dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Verification Code:"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toStartOf="@+id/verificationCode"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/informText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/verificationCode"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/verificationText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/informText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Verification code has been sent to your bilkent mail."
        app:layout_constraintBottom_toTopOf="@+id/verificationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

</android.support.constraint.ConstraintLayout>